Still tryong to fix display on mobile devices

--- a/rapport/css/stylesheetRapport.css
+++ b/rapport/css/stylesheetRapport.css
@@ -1,7 +1,7 @@
 /*
     Created on : May, the 4th, 7:29 PM
     Author     : Poinsignon Nicolas
-     
+
 */
 
 html, body {
@@ -14,13 +14,16 @@ html, body {
     position: relative;
     width: 100%;
     height: 100%;
-    margin: auto;
     padding: 0;
+    margin: 0;
 }
 
 #leftMenuContainer {
     position: fixed;
-    top: 0px;
+    margin-right: 84%;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    margin-left: 0%;
     width: 16%;
     height: 100%;
     background-color: #ece2c6;
@@ -48,6 +51,7 @@ html, body {
     margin-right: 2%;
     margin-top: 2%;
     margin-bottom: 2%;
+    margin-left: 18%;
     width: 80%;
     height: 100%;
     background-color: #f2ebd9;
